--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,8 +42,8 @@ body {
 main {
     width: 90%;
     max-width: 1000px;
-    margin: 2.5em 5%;
-    gap: 2.5em;
+    margin: 1.75em 5%;
+    gap: 1.75em;
 }
 
 main>section {
@@ -124,26 +124,6 @@ footer {
     align-self: center;
 }
 
-/* Custom scrollbars for text sections */
-.textContainer {
-    overflow-y: scroll;
-    scrollbar-color: rgbrgb(22, 93, 117) rgba(202, 240, 248, .7);
-    scrollbar-width: medium;
-}
-
-.textContainer::-webkit-scrollbar {
-    width: .7em;
-}
-
-.textContainer::-webkit-scrollbar-thumb {
-    height: .5em;
-    background: rgb(22, 93, 117);
-}
-
-.textContainer::-webkit-scrollbar {
-    background-color: rgba(202, 240, 248, .7);
-}
-
 
 /* Nav menu display properties */
 nav {
@@ -165,8 +145,31 @@ nav ul {
     flex-direction: column;
     align-items: center;
     list-style-type: none;
-
 }
+
+
+/* Custom scrollbars for text sections */
+/* Custom scrollbar for Firefox */
+.textContainer {
+    overflow-y: scroll;
+    scrollbar-color: rgb(22, 93, 117) rgba(202, 240, 248, .7);
+    scrollbar-width: thin;
+}
+
+/* Custom scrollbar for all other browsers */
+.textContainer::-webkit-scrollbar {
+    width: .7em;
+}
+
+.textContainer::-webkit-scrollbar-thumb {
+    height: .5em;
+    background: rgb(22, 93, 117);
+}
+
+.textContainer::-webkit-scrollbar {
+    background-color: rgba(202, 240, 248, .7);
+}
+
 
 nav li {
     padding: 0.5em;
